Test/4-7_cluster.clu
Cluster size 4
Cluster number 70104        # E:      Factor:7  P:  , Ori size:4    Sub:4    From:7           
   4    7     fam_4_1           1-120      1   leng: 119
   4    7     fam_4_2           1-120      1   leng: 119
   4    7     fam_4_3           1-120      1   leng: 119
   4    7     fam_4_4           1-120      1   leng: 119
